# Iran-AQI-Tracker

./: .gitignore  main.py  pyproject.toml
src/: config.py  constants.py
src/fetch/: aqi_fetcher.py  utils.py
src/process/: data_processor.py
src/visualize/: base.py  utils.py  yearly_report.py
